console/kubernetes/darzee-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: darzee
  name: darzee-dc
spec:
  selector:
    matchLabels:
      app: darzee
  replicas: 1 
  template:
    metadata:
      labels:
        app: darzee
    spec:
      containers:
      - name: darzee
        image: emcmongoose/darzee:kube
        ports:
        - name: nodejs-port
          containerPort: 8080
        - name: prometheus-port
          containerPort: 9090
